tests/k8s_testcases/network-policy-checks-bad-path/metadata_wrong_type.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
# wrong type (with - before each field):
metadata:
  - name: metadata-test-type
  - namespace: kube-system
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
  ingress:
    - from:
      - namespaceSelector: {}
        podSelector: {}
  egress:
    - to:
      - namespaceSelector: {}
        podSelector: {}
